@@ -1,0 +1,15 @@
+;;;
+;;; Test dbd.mysql
+;;;
+
+(use gauche.test)
+(use gauche.collection)
+(use srfi-1)
+(use srfi-13)
+
+(test-start "dbd.mysql(low level)")
+(use dbd.mysql)
+(test-module 'dbd.mysql)
+
+;; epilogue
+(test-end)
