@@ -1,5 +1,9 @@
 2007-02-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: test/dbi.scm, test/dbd.scm
+	  Now test.scm is splitted into test/dbi.scm(via DBI test) and
+	  test/dbd.scm(low level test/not implemented yet).
+
 	* Fix: dbd_mysqllib.stub
 	  Use SCM_STRING_BODY* API instead of Scm_GetStringConst and SCM_STRING_SIZE.
 
